Include script when restoring git

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -95,7 +95,7 @@ jobs:
           git fetch
           git switch doc-output || git switch --orphan doc-output
           
-          git restore --source master $script documentation/update-last-changed.sh
+          git restore --source master $script documentation/update-last-changed.sh documentation/apply-doc-cfg.sh
           bash $script "$REPO" "$NUM" "$DATE"
 
       - name: "Wait for concurrent workflows to finish..."
